fix: delete comments & add z-index for header

--- a/nootris-adaptive/css/style.css
+++ b/nootris-adaptive/css/style.css
@@ -33,6 +33,11 @@ body {
 
 /* * HEADER START */
 
+.header {
+    position: relative;
+    z-index: 10;
+}
+
 .header__container {
     display: flex;
     min-height: 80px;
